# HyperboxApi

./: .gitignore  DATA_structure.md  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  routes.txt
api/: bases.py  config.py  database.py  main.py  models.py  utils.py
api/routes/: __init__.py  auth.py  modpacks.py  resources.py  skins.py
api/services/: __init__.py  auth.py  skins.py
auth/: dependencies.py  jwt.py
core/: schemas.py  utils.py
core/database/: models.py  session.py  users.py
core/routes/: users.py
core/services/: users.py
launcher/: schemas.py
launcher/routes/: commands.py  modpacks.py  resources.py  skins.py
launcher/services/: commands.py  skins.py
tests/: auth.py  core.py  skins.py
