[project]
name = "hyperboxapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
